--- a/news-from-actinia/css/index.css
+++ b/news-from-actinia/css/index.css
@@ -375,6 +375,7 @@ div#features #welcome-foss4g {
 .impress-on-kleinanzeigen div#features,
 .impress-on-openeo div#features,
 .impress-on-amp-self-desc div#features,
+.impress-on-actinia-tpl div#features,
 .impress-on-actinia-tpl-crud div#features,
 .impress-on-actinia-tpl-processing div#features,
 .impress-on-projects div#features,
